Completed aimbot, added fakescroll, added timeout, removed unneeded code

--- a/Paladin Config Editor/Paladin Config Editor/Paladin Config Editor.vcxproj
+++ b/Paladin Config Editor/Paladin Config Editor/Paladin Config Editor.vcxproj
@@ -115,7 +115,7 @@
     <Link>
       <AdditionalDependencies />
       <SubSystem>Windows</SubSystem>
-      <EntryPointSymbol>Main</EntryPointSymbol>
+      <EntryPointSymbol>main</EntryPointSymbol>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
