--- a/Paladin Config Editor/Paladin Config Editor/Paladin Config Editor.vcxproj.filters
+++ b/Paladin Config Editor/Paladin Config Editor/Paladin Config Editor.vcxproj.filters
@@ -37,4 +37,9 @@
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Paladin.resx">
+      <Filter>Resource Files</Filter>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
