Cleaned up base and started some modifications for rework(?)

--- a/PaladinCSGO/PaladinCSGO/PaladinCSGO.vcxproj.filters
+++ b/PaladinCSGO/PaladinCSGO/PaladinCSGO.vcxproj.filters
@@ -38,7 +38,7 @@
     <ClInclude Include="main.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Legitbot.h">
+    <ClInclude Include="Aimbot.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
