--- a/CSGO/CSGO/CSGO.vcxproj
+++ b/CSGO/CSGO/CSGO.vcxproj
@@ -19,22 +19,24 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\debug.h" />
     <ClInclude Include="Source\Features\engine.h" />
     <ClInclude Include="Source\Features\Miscellaneous\automation.h" />
+    <ClInclude Include="Source\global.h" />
     <ClInclude Include="Source\main.h" />
     <ClInclude Include="Source\Program\config.h" />
-    <ClInclude Include="Source\Program\debug.h" />
-    <ClInclude Include="Source\Program\global.h" />
+    <ClInclude Include="Source\Program\general.h" />
     <ClInclude Include="Source\Program\memory.h" />
     <ClInclude Include="Source\Program\interface.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Source\debug.cpp" />
     <ClCompile Include="Source\Features\engine.cpp" />
     <ClCompile Include="Source\Features\Miscellaneous\automation.cpp" />
+    <ClCompile Include="Source\global.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Program\config.cpp" />
-    <ClCompile Include="Source\Program\debug.cpp" />
-    <ClCompile Include="Source\Program\global.cpp" />
+    <ClCompile Include="Source\Program\general.cpp" />
     <ClCompile Include="Source\Program\memory.cpp" />
     <ClCompile Include="Source\Program\interface.cpp" />
   </ItemGroup>
