--- a/CSGO/CSGO/CSGO.vcxproj.filters
+++ b/CSGO/CSGO/CSGO.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="Source\debug.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Source\Features\Awareness\hitsound.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source\Program\config.cpp">
@@ -69,6 +72,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Source\debug.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Features\Awareness\hitsound.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
